    src/pkcs15init/cyberflex.profile, src/pkcs15init/flex.profile,
    src/pkcs15init/gpk.profile, src/pkcs15init/incrypto34.profile,
    src/pkcs15init/jcop.profile, src/pkcs15init/muscle.profile,
    src/pkcs15init/pkcs15-lib.c, src/pkcs15init/starcos.profile: Backport
    fix from svn#3605 for CVE-2009-0368: "OpenSC stores private data
    without proper access restrictions."

 --

opensc (0.11.4-5) unstable; urgency=high

  * src/tools/pkcs15-tool.c: Small fix to the previous security
    vulnerability to remove a strict check for the default card label.

 -- Eric Dorland <eric@debian.org>  Fri, 29 Aug 2008 03:14:53 -0400

opensc (0.11.4-4) unstable; urgency=high

  * src/libopensc/card-cardos.c, src/tools/pkcs15-tool.c: Patch to fix
    CVE-2008-2235 "OpenSC initializes CardOS cards with improper 
    access rights".
  * debian/control: Up Standards-Version to 3.7.3.
  * debian/opensc.NEWS: Fix typo.

 -- Eric Dorland <eric@debian.org>  Thu, 31 Jul 2008 13:27:31 -0400

opensc (0.11.4-3) unstable; urgency=low

  * etc/opensc.conf.in: Document that lock_login is actually set to false
    by default. Thanks Mark Proehl. (Closes: #457322)
  * debian/mozilla-opensc.install: Don't install .a file. (Closes: #459542)

 -- Eric Dorland <eric@debian.org>  Mon, 07 Jan 2008 23:54:18 -0500

opensc (0.11.4-2) unstable; urgency=low

  * debian/libopensc2.install: Install onepin-opensc-pkcs11 signer. Thanks
    Laurent Bigonville. (Closes: #449219)
  * debian/libopensc2-dev.install: Install all the .a files.
  * debian/control: Remove XS- prefix from Vcs headers.

 -- Eric Dorland <eric@debian.org>  Sun, 04 Nov 2007 18:04:34 -0500

opensc (0.11.4-1) unstable; urgency=low

  * New upstream release.
  * src/signer/dialog.c: Remove spurious redefinition of PIN_ENTRY.
  * debian/control: Add Hompage and XS-Vcs-* headers.

 -- Eric Dorland <eric@debian.org>  Sat, 22 Sep 2007 04:13:54 -0400

opensc (0.11.3-1) unstable; urgency=low

  * New upstream release. (Closes: #424013)