@@ -7,6 +7,10 @@ opensc (0.11.4-5lenny1) stable-security; urgency=critical
     src/pkcs15init/pkcs15-lib.c, src/pkcs15init/starcos.profile: Backport
     fix from svn#3605 for CVE-2009-0368: "OpenSC stores private data
     without proper access restrictions."
+  * etc/opensc.conf.in, src/pkcs11/misc.c: Change the defaults of
+    lock_login and soft_keygen_allowed to prevent untrusted applications
+    from using the smartcard and preventing unexpected client side key
+    generation.
 
  --
 
